added choose section

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+     <!-- tailwind style -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <!-- font awesome style -->
+    <script src="https://kit.fontawesome.com/dec71dcf24.js" crossorigin="anonymous"></script>
+    <title>Fruits Burst</title>
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 
     <style>
 
@@ -345,7 +348,7 @@
 
                         <!-- team members -->
                         <div class=" gap-3 flex flex-col justify-center items-center md:flex-col lg:flex-row">
-                               <!-- team members 1 -->
+                            <!-- team members 1 -->
                             <div class=" mt-10 pt-6 flex-1">
                                 <img src="img/member1.png" alt="">
                                 <h2 class=" text-xl text-white text-left pl-7 lg:pl-0"> Awlad Hossain </h2>
@@ -355,8 +358,8 @@
                                         class="fa-brands fa-linkedin-in"></i> </div>
                             </div>
 
-                              <!-- team members 2 -->
-                              <div class=" mt-10 pt-6 flex-1">
+                            <!-- team members 2 -->
+                            <div class=" mt-10 pt-6 flex-1">
                                 <img src="img/member2.png" alt="">
                                 <h2 class=" text-xl text-white text-left pl-7 lg:pl-0"> Safia Chowdhury </h2>
                                 <p class=" text-white text-left pl-7 lg:pl-0">Fruits Expert</p>
@@ -365,8 +368,8 @@
                                         class="fa-brands fa-linkedin-in"></i> </div>
                             </div>
 
-                              <!-- team members 3 -->
-                              <div class=" mt-10 pt-6 flex-1">
+                            <!-- team members 3 -->
+                            <div class=" mt-10 pt-6 flex-1">
                                 <img src="img/member3.png" alt="">
                                 <h2 class=" text-xl text-white text-left pl-7 lg:pl-0"> Rokib Hossain </h2>
                                 <p class=" text-white text-left pl-7 lg:pl-0">Fruits Expert</p>
@@ -375,14 +378,15 @@
                                         class="fa-brands fa-linkedin-in"></i> </div>
                             </div>
 
-                              <!-- team members 4-->
-                              <div class=" mt-10 pt-6 flex-1">
+                            <!-- team members 4-->
+                            <div class=" mt-10 pt-6 flex-1">
                                 <img src="img/member4.png" alt="">
                                 <h2 class=" text-xl text-white text-left pl-7 lg:pl-0"> Chaity khan</h2>
                                 <p class=" text-white text-left pl-7 lg:pl-0">Fruits Expert</p>
                                 <!-- icon -->
-                                <div class=" bg-orange-400"><i class="fa-brands fa-facebook"></i> <i class="fa-brands fa-twitter"></i> <i
-                                        class="fa-brands fa-linkedin-in"></i> </div>
+                                <div class=""><i class="fa-brands fa-facebook"></i> <i
+                                        class="fa-brands fa-twitter"></i> <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
                             </div>
                         </div>
 
@@ -394,6 +398,89 @@
 
 
 
+
+        </section>
+
+        <!-- choose section -->
+        <section class="gap-5 mt-10">
+            <!-- head -->
+            <div class=" pb-10 mb-5 mx-20 lg:mx-60 justify-center items-center">
+                <h2 class=" text-3xl font-extrabold text-center"> Why Choose Us</h2>
+                <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin
+                    literature from 45 BC, making it over 2000 years old.</p>
+
+            </div>
+               <!-- body -->
+            <div class=" gap-5 flex flex-col max-md:flex-col lg:flex-row">
+            <!-- left -->
+            <div class=" flex-1 text-center lg:text-left">
+                <div class="flex flex-col md:flex-col lg:flex-row items-center my-5">
+                    <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
+                     
+                     <div class=" ">
+                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mx-0"></div>
+                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                    </div>   
+                </div>
+
+                <div class="flex flex-col md:flex-col lg:flex-row items-center my-5">
+                    <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
+                     <div class=" ">
+                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mx-0"></div>
+                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                    </div>   
+                </div>
+
+                <div class="flex flex-col md:flex-col lg:flex-row items-center my-5">
+                    <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
+                     <div class=" ">
+                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mx-0"></div>
+                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                    </div>   
+                </div>
+
+            </div>
+
+            <!-- center -->
+            <div class="flex-1">
+                <img src="img/whychoose1.png" alt="">
+            </div>
+
+            <!-- right -->
+            <div class=" flex-1 text-center lg:text-right ">
+                <div class="flex flex-col md:flex-col lg:flex-row-reverse items-center my-5">
+                    <div class="flex flex-row-reverse"><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
+                     <div class=" ">
+                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mr-0"></div>
+                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                    </div>   
+                </div>
+
+                <div class="flex flex-col md:flex-col lg:flex-row-reverse items-center lg:my-5">
+                    <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
+                     <div class=" ">
+                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mr-0"></div>
+                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                    </div>   
+                </div>
+
+                <div class="flex flex-col md:flex-col lg:flex-row-reverse items-center my-5">
+                    <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
+                     <div class="  ">
+                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mr-0 "></div>
+                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                    </div>   
+                </div>
+
+            </div>
+
+        </div>
 
         </section>
 
