--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!-- tailwind style -->
+    <!-- tailwind style -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- font awesome style -->
@@ -18,9 +18,9 @@
     </style>
 </head>
 
-<body class=" m-20">
+<body >
 
-    <header>
+    <header class=" m-20">
 
         <div class="navbar bg-[#F85559] rounded-lg  ">
             <div class="navbar-start">
@@ -123,7 +123,7 @@
 
     </header>
 
-    <main>
+    <main class=" m-20">
 
         <!-- deal section -->
         <section class=" my-32 gap-6">
@@ -384,8 +384,8 @@
                                 <h2 class=" text-xl text-white text-left pl-7 lg:pl-0"> Chaity khan</h2>
                                 <p class=" text-white text-left pl-7 lg:pl-0">Fruits Expert</p>
                                 <!-- icon -->
-                                <div class=""><i class="fa-brands fa-facebook"></i> <i
-                                        class="fa-brands fa-twitter"></i> <i class="fa-brands fa-linkedin-in"></i>
+                                <div class=""><i class="fa-brands fa-facebook"></i> <i class="fa-brands fa-twitter"></i>
+                                    <i class="fa-brands fa-linkedin-in"></i>
                                 </div>
                             </div>
                         </div>
@@ -410,82 +410,113 @@
                     literature from 45 BC, making it over 2000 years old.</p>
 
             </div>
-               <!-- body -->
+            <!-- body -->
             <div class=" gap-5 flex flex-col max-md:flex-col lg:flex-row">
-            <!-- left -->
-            <div class=" flex-1 text-center lg:text-left">
-                <div class="flex flex-col md:flex-col lg:flex-row items-center my-5">
-                    <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
-                     
-                     <div class=" ">
-                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
-                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mx-0"></div>
-                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
-                    </div>   
+                <!-- left -->
+                <div class=" flex-1 text-center lg:text-left">
+                    <div class="flex flex-col md:flex-col lg:flex-row items-center my-5">
+                        <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
+
+                        <div class=" ">
+                            <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                            <div class=" w-24 h-[1px] bg-black mx-auto lg:mx-0"></div>
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col md:flex-col lg:flex-row items-center my-5">
+                        <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-heart-circle-plus"></i></button></div>
+                        <div class=" ">
+                            <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                            <div class=" w-24 h-[1px] bg-black mx-auto lg:mx-0"></div>
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col md:flex-col lg:flex-row items-center my-5">
+                        <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-gifts"></i></button></div>
+                        <div class=" ">
+                            <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                            <div class=" w-24 h-[1px] bg-black mx-auto lg:mx-0"></div>
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                        </div>
+                    </div>
+
                 </div>
 
-                <div class="flex flex-col md:flex-col lg:flex-row items-center my-5">
-                    <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
-                     <div class=" ">
-                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
-                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mx-0"></div>
-                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
-                    </div>   
+                <!-- center -->
+                <div class="flex-1">
+                    <img src="img/whychoose1.png" alt="">
                 </div>
 
-                <div class="flex flex-col md:flex-col lg:flex-row items-center my-5">
-                    <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
-                     <div class=" ">
-                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
-                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mx-0"></div>
-                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
-                    </div>   
+                <!-- right -->
+                <div class=" flex-1 text-center lg:text-right ">
+                    <div class="flex flex-col md:flex-col lg:flex-row-reverse items-center my-5">
+                        <div class="flex flex-row-reverse"><button class="btn btn-gosht rounded-full">
+                            <i class="fa-solid fa-pepper-hot"></i></button></div>
+                        <div class=" ">
+                            <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                            <div class=" w-24 h-[1px] bg-black mx-auto lg:mr-0"></div>
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col md:flex-col lg:flex-row-reverse items-center lg:my-5">
+                        <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-ice-cream"></i></button></div>
+                        <div class=" ">
+                            <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                            <div class=" w-24 h-[1px] bg-black mx-auto lg:mr-0"></div>
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col md:flex-col lg:flex-row-reverse items-center my-5">
+                        <div><button class="btn btn-gosht rounded-full"><i class="fa-regular fa-thumbs-up"></i></button></div>
+                        <div class="  ">
+                            <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
+                            <div class=" w-24 h-[1px] bg-black mx-auto lg:mr-0 "></div>
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
-
-            <!-- center -->
-            <div class="flex-1">
-                <img src="img/whychoose1.png" alt="">
-            </div>
-
-            <!-- right -->
-            <div class=" flex-1 text-center lg:text-right ">
-                <div class="flex flex-col md:flex-col lg:flex-row-reverse items-center my-5">
-                    <div class="flex flex-row-reverse"><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
-                     <div class=" ">
-                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
-                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mr-0"></div>
-                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
-                    </div>   
-                </div>
-
-                <div class="flex flex-col md:flex-col lg:flex-row-reverse items-center lg:my-5">
-                    <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
-                     <div class=" ">
-                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
-                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mr-0"></div>
-                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
-                    </div>   
-                </div>
-
-                <div class="flex flex-col md:flex-col lg:flex-row-reverse items-center my-5">
-                    <div><button class="btn btn-gosht rounded-full"><i class="fa-solid fa-users"></i></button></div>
-                     <div class="  ">
-                     <h2 class=" text-2xl font-bold"> Dedicated Team </h2>
-                      <div class=" w-24 h-[1px] bg-black mx-auto lg:mr-0 "></div>
-                      <p>Professional employees are there for you to pick the most amazing and fresh fruits. </p>
-                    </div>   
-                </div>
-
-            </div>
-
-        </div>
 
         </section>
 
-
     </main>
+    <!-- footer section -->
+
+    <footer class="footer footer-center mt-10 p-10 bg-black text-white text-base-content rounded max-w-full">
+
+        <div class="flex">
+            <img src="img/logo.png" alt="">
+            <h2 class=" text-2xl font-bold">Fruit Burst</h2>
+        </div>
+        <div class="grid grid-cols-3 md:grid-cols-3 lg:grid-flow-col gap-4 ">
+            <a class="link link-hover">Home</a>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Shop</a>
+            <a class="link link-hover">All Fruits</a>
+            <a class="link link-hover">support</a>
+            <a class="link link-hover">My Account</a>
+        </div>
+        <div class=" gap-5 grid grid-cols-3 md:grid-cols-3 lg:grid-cols-6 ">
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-apple"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-square-youtube"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+            <i class="fa-brands fa-square-twitter"></i>
+
+        </div>
+
+    </footer>
+
+
+
+
 
 </body>
 
