--- a/index.html
+++ b/index.html
@@ -64,28 +64,28 @@
             <!-- banner carousel -->
             <div class="carousel w-full z-20  ">
                 <div id="slide1" class="carousel-item relative w-full">
-                    <img src="/img/banner1.png" class="w-full" />
+                    <img src="img/banner1.PNG" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide4" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
                     </div>
                 </div>
                 <div id="slide2" class="carousel-item relative w-full">
-                    <img src="/img/banner2.png" class="w-full" />
+                    <img src="img/banner2.PNG" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide1" class="btn btn-circle">❮</a>
                         <a href="#slide3" class="btn btn-circle">❯</a>
                     </div>
                 </div>
                 <div id="slide3" class="carousel-item relative w-full">
-                    <img src="/img/banner3.png" class="w-full" />
+                    <img src="img/banner3.PNG" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide2" class="btn btn-circle">❮</a>
                         <a href="#slide4" class="btn btn-circle">❯</a>
                     </div>
                 </div>
                 <div id="slide4" class="carousel-item relative w-full">
-                    <img src="/img/banner4.png" class="w-full" />
+                    <img src="img/banner4.PNG" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide1" class="btn btn-circle">❯</a>
@@ -96,23 +96,23 @@
             <!-- banner footer -->
             <div class=" w-[980px] ml-20 px-10 bg-white hidden lg:flex absolute top-[450px] ">
                 <div class=" flex-1">
-                    <img src="img/fruit1.png" alt="">
+                    <img src="img/fruit1.PNG" alt="">
                     <p class=" text-center"> Strawberry</p>
                 </div>
                 <div class=" flex-1">
-                    <img src="img/fruit2.png" alt="">
+                    <img src="img/fruit2.PNG" alt="">
                     <p class=" text-center">orange</p>
                 </div>
                 <div class=" flex-1">
-                    <img src="img/fruit3.png" alt="">
+                    <img src="img/fruit3.PNG" alt="">
                     <p class=" text-center">Mango</p>
                 </div>
                 <div class=" flex-1">
-                    <img src="img/fruit4.png" alt="">
+                    <img src="img/fruit4.PNG" alt="">
                     <p class=" text-center">strawberry</p>
                 </div>
                 <div class=" flex-1">
-                    <img src="img/fruit5.png" alt="">
+                    <img src="img/fruit5.PNG" alt="">
                     <p class=" text-center">Mango</p>
                 </div>
             </div>
@@ -125,7 +125,7 @@
     <main class=" m-20">
 
         <!-- deal section -->
-        <section class=" my-32 gap-6">
+        <section class=" my-32 gap-6 mt-10">
 
             <div class="flex flex-col lg:flex-row my-14">
                 <div class=" flex-1">
