--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <main class=" m-20">
 
         <!-- deal section -->
-        <section class=" my-32 gap-6 mt-10">
+        <section class=" my-32 gap-6 mt-20">
 
             <div class="flex flex-col lg:flex-row my-14">
                 <div class=" flex-1">
@@ -173,7 +173,7 @@
                 <!-- deal card 1 -->
                 <div class="card w-96 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
-                        <img src="/img/fruit6.png" alt="Shoes" class="rounded-xl" />
+                        <img src="/img/fruit6.PNG" alt="Apple" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -238,7 +238,7 @@
                  <!-- deal card 2 -->
                  <div class="card w-96 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
-                        <img src="/img/fruit7.png" alt="orange" class="rounded-xl" />
+                        <img src="/img/fruit7.PNG" alt="orange" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -302,7 +302,7 @@
                  <!-- deal card 3 -->
                  <div class="card w-96 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
-                        <img src="/img/fruit8.png" alt="dragon" class="rounded-xl" />
+                        <img src="/img/fruit8.PNG" alt="dragon" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -335,7 +335,7 @@
                     <div class="modal">
                         <div class="modal-box">
                             <figure class="px-10 pt-10">
-                                <img src="/img/fruit8.png" alt="dragon" class="rounded-xl" />
+                                <img src="/img/fruit8.PNG" alt="dragon" class="rounded-xl" />
                             </figure>
                             <h3 class="font-bold text-lg text-center mx-52">dragon</h3>
                             <p class="py-4 text-center">This modal works with a hidden checkbox!</p>
