--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <header class=" m-20">
+    <header class=" m-20 mb-52">
 
         <div class="navbar ml-0  pl-0 bg-[#F85559] rounded-3xl  ">
             <div class="navbar-start lg:flex-1">
@@ -64,28 +64,28 @@
             <!-- banner carousel -->
             <div class="carousel w-full z-20  ">
                 <div id="slide1" class="carousel-item relative w-full">
-                    <img src="img/banner1.PNG" class="w-full" />
+                    <img src="./img/banner1.png" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide4" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
                     </div>
                 </div>
                 <div id="slide2" class="carousel-item relative w-full">
-                    <img src="img/banner2.PNG" class="w-full" />
+                    <img src="./img/banner2.png" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide1" class="btn btn-circle">❮</a>
                         <a href="#slide3" class="btn btn-circle">❯</a>
                     </div>
                 </div>
                 <div id="slide3" class="carousel-item relative w-full">
-                    <img src="img/banner3.PNG" class="w-full" />
+                    <img src="./img/banner3.png" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide2" class="btn btn-circle">❮</a>
                         <a href="#slide4" class="btn btn-circle">❯</a>
                     </div>
                 </div>
                 <div id="slide4" class="carousel-item relative w-full">
-                    <img src="img/banner4.PNG" class="w-full" />
+                    <img src="./img/banner4.png" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide1" class="btn btn-circle">❯</a>
@@ -96,23 +96,23 @@
             <!-- banner footer -->
             <div class=" w-[980px] ml-20 px-10 bg-white hidden lg:flex absolute top-[450px] ">
                 <div class=" flex-1">
-                    <img src="img/fruit1.PNG" alt="">
+                    <img src="./img/fruit1.png" alt="">
                     <p class=" text-center"> Strawberry</p>
                 </div>
                 <div class=" flex-1">
-                    <img src="img/fruit2.PNG" alt="">
+                    <img src="./img/fruit2.png" alt="">
                     <p class=" text-center">orange</p>
                 </div>
                 <div class=" flex-1">
-                    <img src="img/fruit3.PNG" alt="">
+                    <img src="./img/fruit3.png" alt="">
                     <p class=" text-center">Mango</p>
                 </div>
                 <div class=" flex-1">
-                    <img src="img/fruit4.PNG" alt="">
+                    <img src="./img/fruit4.png" alt="">
                     <p class=" text-center">strawberry</p>
                 </div>
                 <div class=" flex-1">
-                    <img src="img/fruit5.PNG" alt="">
+                    <img src="./img/fruit5.png" alt="">
                     <p class=" text-center">Mango</p>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                 <!-- deal card 1 -->
                 <div class="card w-96 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
-                        <img src="/img/fruit6.PNG" alt="Apple" class="rounded-xl" />
+                        <img src="./img/fruit6.PNG" alt="Apple" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
