--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
             </div>
 
             <!-- banner footer -->
-            <div class=" w-[980px] ml-20 px-10 bg-white hidden lg:flex absolute top-[450px] ">
+            <div class=" w-[980px] ml-24 px-14 bg-white hidden lg:flex absolute top-[500px] ">
                 <div class=" flex-1">
                     <img src="./img/fruit1.png" alt="">
-                    <p class=" text-center"> Strawberry</p>
+                    <p class=" text-center"> Grapes</p>
                 </div>
                 <div class=" flex-1">
                     <img src="./img/fruit2.png" alt="">
@@ -113,7 +113,9 @@
                 </div>
                 <div class=" flex-1">
                     <img src="./img/fruit5.png" alt="">
-                    <p class=" text-center">Mango</p>
+                    <p class=" text-center">Pomegranate </p>
+
+                        
                 </div>
             </div>
 
