--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
 
             <!-- banner footer -->
-            <div class=" w-[980px] ml-24 px-14 bg-white hidden lg:flex absolute top-[500px] ">
+            <div class=" w-[980px] ml-24 px-14 bg-white hidden lg:flex absolute top-[470px] ">
                 <div class=" flex-1">
                     <img src="./img/fruit1.png" alt="">
                     <p class=" text-center"> Grapes</p>
@@ -141,22 +141,22 @@
                     <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
                         <div class="flex flex-col">
                             <span class="countdown font-mono text-5xl">
-                                <span style="--value:15;"></span>
+                                <span style="--value:15;"> </span>
                             </span>
                             days
-                        </div>
+                        </div><i class="fa-solid fa-ellipsis-vertical mt-5" ></i>
                         <div class="flex flex-col">
                             <span class="countdown font-mono text-5xl">
-                                <span style="--value:10;"></span>
+                                <span style="--value:10;"> <i class="fa-solid fa-ellipsis-vertical"></i></span>
                             </span>
                             hours
-                        </div>
+                        </div><i class="fa-solid fa-ellipsis-vertical mt-5" ></i>
                         <div class="flex flex-col">
                             <span class="countdown font-mono text-5xl">
-                                <span style="--value:24;"></span>
+                                <span style="--value:24;"> <i class="fa-solid fa-ellipsis-vertical"></i></span>
                             </span>
                             min
-                        </div>
+                        </div> <i class="fa-solid fa-ellipsis-vertical mt-5" ></i>
                         <div class="flex flex-col">
                             <span class="countdown font-mono text-5xl">
                                 <span style="--value:22;"></span>
@@ -432,6 +432,8 @@
 
 
             </div>
+
+            <div class="my-10 mx-32 lg:mx-72"> <button class=" btn btn-error lg:mx-64"> Shop All </button></div>
 
         </section>
 
